# uni-RAG-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  convert_legacy_files.py  project-overview.md  pyproject.toml
context/: README.md  architecture.md  decisions.md  glossary.md  operations.md  progress_tracker.md  project_overview.md
context/capabilities/: configuration-and-storage.md  evaluation.md  evidence-and-answering.md  extraction-and-data-summaries.md  inventory-and-source-admission.md  keyword-and-vector-indexing.md  query-planning-and-retrieval.md  web-application.md
context/feature-specs/: 01-project-foundation.md  02-configuration-and-storage.md  03-inventory-and-file-classification.md  04-text-extraction-and-chunking.md  05-data-schema-summaries.md  06-keyword-indexing.md  07-vector-indexing.md  08-query-routing-and-hybrid-retrieval.md  09-evidence-packets-and-coverage.md  10-answering-and-citations.md  11-fastapi-html-ui.md  12-evaluation-and-hardening.md  README.md
evals/: fixtures.json
evals/sources/High Preformance Computing for Big Data/: benchmark.csv  mapreduce_code.py
evals/sources/Information Retrieval/: hybrid_retrieval.md  lecture_slides.pptx  retrieval_transcript.vtt  search_demo.ipynb
notebooks/: answering_eda.ipynb  data_schema_eda.ipynb  evaluation_eda.ipynb  extraction_eda.ipynb  inventory_eda.ipynb  keyword_index_eda.ipynb  retrieval_eda.ipynb  vector_index_eda.ipynb
src/uni_rag_agent/: __init__.py  __main__.py  cli.py  config.py  gemini_failover.py  logging_config.py  search_contracts.py  source_filters.py
src/uni_rag_agent/answering/: __init__.py  audit.py  core.py  models.py  persistence.py  providers.py  session.py
src/uni_rag_agent/app/: __init__.py  api.py  service.py  settings.py
src/uni_rag_agent/cli_commands/: __init__.py  app.py  config_storage.py  evaluation.py  evidence_answering.py  indexing.py  ingestion.py  retrieval.py
src/uni_rag_agent/cli_support/: __init__.py  constants.py  renderers.py  telemetry.py
src/uni_rag_agent/evaluation/: __init__.py  core.py  models.py
src/uni_rag_agent/extraction/: __init__.py  _textutils.py  chunking.py  constants.py  core.py  models.py  persistence.py
src/uni_rag_agent/indexing/: __init__.py  eligibility.py  embeddings.py  keyword.py  models.py  profiles.py  vector.py
src/uni_rag_agent/inventory/: __init__.py  core.py  (+3 more)
tests/: embedding_doubles.py  sqlite_helpers.py  support.py  test_answering.py  test_app.py  test_cli.py  test_config.py  test_data_summaries.py  test_embedding_providers.py  test_evaluation.py  test_evidence_packets.py  test_extraction.py  test_gemini_failover.py  test_hybrid_retrieval.py  test_inventory.py  test_keyword_indexing.py  test_logging_config.py  test_query_planning.py  test_query_routing.py  test_search_contracts.py  test_storage.py  test_vector_indexing.py
(+43 files in other folders)
