[project]
name = "uni-rag-agent"
version = "0.1.0"
description = "Local course archive RAG agent with source-grounded retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
