[project]
name = "uni-rag-agent"
version = "0.1.0"
description = "Local course archive RAG agent with source-grounded retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain-core>=0.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
# The base environment supports non-vector Features 01-06. Vector indexing
# requires the optional local Hugging Face model stack below.
embeddings = [
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
]
# Hosted embedding providers are lazy and are needed only when a hosted
# profile is selected.
embeddings-cloud = [
    "google-genai>=2.11.0",
    "openai>=1.0.0",
]
# LLM integrations are lazy; the `llm` extra is required only by `retrieve`.
llm = [
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uni_rag_agent.app" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
